--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.0.0",
+    "ethers": "^6.3.0",
     "next": "^12.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
